--- a/ja/team.html
+++ b/ja/team.html
@@ -353,7 +353,7 @@
                                 </div>
                                 <div class="member-social">
                                     
-                                                                            <a class="social-1" href="www.linkedin.com/in/anastasiamiron/">
+                                                                            <a class="social-1" href="https://www.linkedin.com/in/anastasiamiron/">
                                                                                             <img src="/en/img/icons/facebook.png?v=1.1.36">
                                                                                     </a>
                                                                     </div>
