--- a/cn/index.html
+++ b/cn/index.html
@@ -1496,15 +1496,16 @@
                     
                     <div class="row">
                         <div class="col-12">
+
                             <div class="blog-item blog-full mb-4">
-                                <a class="blog-link" target="_blank" href="https://medium.com/@viarium.io/the-first-vr-platform-for-business-on-blockchain-8677edd081ea"><img class="blog-image" src="/en/img/blog/1_oCdYNF_i4VAYIsdfb4U2AP7Q.jpg?v=1.2.4" alt=""></a>
-                            </div>
-                            <div class="text-left">
-                                <p class="text-lg">The first vr platform for business on blockchain!</p>
-                                <p>Viarium is a virtual platform for selling goods and services through a proprietary cryptocurrency and traditional fiat money. With Viarium, you can sell goods, create trading platforms and showrooms, and build your own universe.</p>
-                                
+                                <a href="" data-target="subVideo-3" data-videoid="5D7yijz4x5Q" class="video-play blog-link video-play--4">
+                                    <img src="/en/img/play-btn.png?v=1.2.4" alt="" class="video-play--btn">
+                                </a>
+                                <div class="iframe iframe-mainVideo" id="subVideo-3"></div>
                             </div>
                         </div>
+
+
                     </div>
                 </div>
 
