--- a/cn/token.html
+++ b/cn/token.html
@@ -469,7 +469,7 @@
                 <div class="col-xl-4 col-lg-5 d-flex justify-content-center flex-column order-lg-2 order-1">
                     <div class="d-lg-none d-block">
                         <div class="text-center text-md mb-5">
-                            Blockchain commune, <br>block 3, 9 2-nd Donskoy lane, Moscow
+                            Blockchain commune, Moscow,<br>2-Y Donskoy Proezd,  9, building 3
                         </div>
                     </div>
                     <div class="d-lg-block d-none">
@@ -477,7 +477,7 @@
                             <span class="mark">Russia</span> Moscow
                         </div>
                         <div class="text-md">
-                            Blockchain commune, <br>block 3, 9 2-nd Donskoy lane, Moscow
+                            Blockchain commune, Moscow,<br>2-Y Donskoy Proezd,  9, building 3
                         </div>
                     </div>
                 </div>
