--- a/ru/team.html
+++ b/ru/team.html
@@ -338,7 +338,7 @@
                             </div>
                             <div class="member-name">Мэтт Коулман</div>
                             <div class="member-position">Adviser</div>
-                            <div class="member-text">Ведущий специалист с более чем 20-летним опытом работы в сфере развлечений / спорта и технологий в области VR/AR. Запустил Magnify World, компанию виртуальной реальности и инновационную спортивную компанию Arival. На протяжение 12-ти лет работал в Warner Entertainment и Sony Entertainment, а затем основал компанию интерактивного мобильного маркетинга Txtstation,  в которую привлек более 6 миллионов долларов венчурных инвестици</div>
+                            <div class="member-text">Ведущий специалист с более чем 20-летним опытом работы в сфере развлечений / спорта и технологий в области VR/AR. Запустил Magnify World, компанию виртуальной реальности и инновационную спортивную компанию Arival. На протяжение 12-ти лет работал в Warner Entertainment и Sony Entertainment, а затем основал компанию интерактивного мобильного маркетинга Txtstation,  в которую привлек более 6 миллионов долларов венчурных инвестиций</div>
                         </div>
                     </div>
                 
