--- a/ru/team.html
+++ b/ru/team.html
@@ -427,7 +427,7 @@
                             </div>
                             <div class="member-name">Дарья Колыванова</div>
                             <div class="member-position">Project Manager</div>
-                            <div class="member-text">Управление проектами в финансовом секторе и IT-технологий. Реализация проектов с нуля до вывода продукта на рынок. Считает, что следующие несколько лет будут ключевыми для для внедрения VR / AR в нашу жизнь.</div>
+                            <div class="member-text">Управление проектами в финансовом секторе и IT-технологиях. Реализация проектов с нуля до вывода продукта на рынок. Считает, что следующие несколько лет будут ключевыми для для внедрения VR / AR в нашу жизнь.</div>
                         </div>
                     </div>
                 
@@ -519,7 +519,7 @@
                             </div>
                             <div class="member-name">Всеволод Король</div>
                             <div class="member-position">Analyst</div>
-                            <div class="member-text">Анализ децентрализованных бирж на рынке, а также методы обмена BTC/ETH/graphene. Разбор клиента Bitshares для его развития под автотрейдера. В результате собрана команда, занимающаяся реализацией децентрализованной биржи со своим внешнем ключом регистрации. Занимался разработкой автоматической системы расчета профиля полета самолёта с нуля до рабочего варианта.</div>
+                            <div class="member-text">Анализ децентрализованных бирж на рынке, а также методы обмена BTC/ETH/graphene. Разбор клиента Bitshares для его развития под автотрейдера. В результате собрана команда, занимающаяся реализацией децентрализованной биржи со своим внешним ключом регистрации. Занимался разработкой автоматической системы расчета профиля полета самолёта с нуля до рабочего варианта.</div>
                         </div>
                     </div>
                 
