--- a/ru/index.html
+++ b/ru/index.html
@@ -324,8 +324,8 @@
                 <div class="row mb-xl-4">
 
                     <div class="col-12">
-                        <div class="title-presale mb-1"><span class="mark">Pre-Sale</span>  досрочно завершен!</div>
-                        <div class="title-presale mb-4"><span class="mark">Soft Cap</span> успешно собран!</div>
+                        <div class="title-presale mb-1"></div>
+                        <div class="title-presale mb-4"><span class="mark">Минимальная</span> сумма участия $ 500</div>
                         
                     </div>
 
