--- a/en/index.html
+++ b/en/index.html
@@ -326,8 +326,8 @@
                 <div class="row mb-xl-4">
 
                     <div class="col-12">
-                        <div class="title-presale mb-1"><span class="mark">Pre-sale</span> is finished ahead of schedule</div>
-                        <div class="title-presale mb-4"><span class="mark">Soft Cap</span> has been reached successfully</div>
+                        <div class="title-presale mb-1"></div>
+                        <div class="title-presale mb-4"><span class="mark">Minimum</span> contribution $ 500</div>
                         
                     </div>
 
