--- a/ja/index.html
+++ b/ja/index.html
@@ -326,8 +326,8 @@
                 <div class="row mb-xl-4">
 
                     <div class="col-12">
-                        <div class="title-presale mb-1"><span class="mark">Pre-sale</span>は早期終了です！</div>
-                        <div class="title-presale mb-4"><span class="mark">Soft Cap</span>は正常に収集されました！</div>
+                        <div class="title-presale mb-1"></div>
+                        <div class="title-presale mb-4"><span class="mark">最低 </span>参加料：<span class="mark">500米</span>ドル</div>
                         
                     </div>
 
