--- a/en/index.html
+++ b/en/index.html
@@ -327,7 +327,7 @@
 
                     <div class="col-12">
                         <div class="title-presale mb-1"></div>
-                        <div class="title-presale mb-4"><span class="mark">Minimum</span> contribution $ 500</div>
+                        <div class="title-presale mb-4"><span class="mark">Minimum</span> contribution <span class="mark">$ 500</span></div>
                         
                     </div>
 
