--- a/ko/index.html
+++ b/ko/index.html
@@ -326,8 +326,8 @@
                 <div class="row mb-xl-4">
 
                     <div class="col-12">
-                        <div class="title-presale mb-1">"<span class="mark">프리세일(Pre-sale)</span>"은 조기마감되었습니다!</div>
-                        <div class="title-presale mb-4">"<span class="mark">소프트캡(Soft cap)</span>"은 성공적으로 모금되었습니다!</div>
+                        <div class="title-presale mb-1"></div>
+                        <div class="title-presale mb-4"><span class="mark">최소</span>참가금액 <span class="mark">$500</span></div>
                         
                     </div>
 
