--- a/ru/index.html
+++ b/ru/index.html
@@ -325,7 +325,7 @@
 
                     <div class="col-12">
                         <div class="title-presale mb-1"></div>
-                        <div class="title-presale mb-4"><span class="mark">Минимальная</span> сумма участия $ 500</div>
+                        <div class="title-presale mb-4"><span class="mark">Минимальная</span> сумма участия <span class="mark">$ 500</span></div>
                         
                     </div>
 
