--- a/cn/index.html
+++ b/cn/index.html
@@ -326,8 +326,8 @@
                 <div class="row mb-xl-4">
 
                     <div class="col-12">
-                        <div class="title-presale mb-1"><span class="mark">Pre-sale</span>结果了！</div>
-                        <div class="title-presale mb-4"><span class="mark">Soft Cap</span>达到了！</div>
+                        <div class="title-presale mb-1"><span class="mark">TOKEN SALE</span></div>
+                        <div class="title-presale mb-4">10.10.2018 - 31.01.2019</div>
                         
                     </div>
 
