--- a/ru/index.html
+++ b/ru/index.html
@@ -324,8 +324,8 @@
                 <div class="row mb-xl-4">
 
                     <div class="col-12">
-                        <div class="title-presale mb-1"></div>
-                        <div class="title-presale mb-4"><span class="mark">Минимальная</span> сумма участия <span class="mark">$ 500</span></div>
+                        <div class="title-presale mb-1"><span class="mark">TOKEN SALE</span></div>
+                        <div class="title-presale mb-4">10.10.2018 - 31.01.2019</div>
                         
                     </div>
 
