--- a/ru/index.html
+++ b/ru/index.html
@@ -2036,7 +2036,7 @@
                                             </div>
                                             <div class="member-name">Дарья Колыванова</div>
                                             <div class="member-position">Project Manager</div>
-                                            <div class="member-text">Управление проектами в финансовом секторе и IT-технологиях. Реализация проектов с нуля до вывода продукта на рынок. Считает, что следующие несколько лет будут ключевыми для для внедрения VR / AR в нашу жизнь.</div>
+                                            <div class="member-text">Управление проектами в финансовом секторе и IT-технологиях. Реализация проектов с нуля до вывода продукта на рынок. Считает, что следующие несколько лет будут ключевыми для внедрения VR / AR в нашу жизнь.</div>
                                         </div>
                                     </div>
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
@@ -2365,7 +2365,7 @@
                                     </div>
                                     <div class="member-name">Дарья Колыванова</div>
                                     <div class="member-position">Project Manager</div>
-                                    <div class="member-text">Управление проектами в финансовом секторе и IT-технологиях. Реализация проектов с нуля до вывода продукта на рынок. Считает, что следующие несколько лет будут ключевыми для для внедрения VR / AR в нашу жизнь.</div>
+                                    <div class="member-text">Управление проектами в финансовом секторе и IT-технологиях. Реализация проектов с нуля до вывода продукта на рынок. Считает, что следующие несколько лет будут ключевыми для внедрения VR / AR в нашу жизнь.</div>
                                 </div>
                             </div>
                                                     <div class="team-slide">
