--- a/ru/index.html
+++ b/ru/index.html
@@ -552,7 +552,7 @@
 													<div class="tab-pane fade" id="v-pills-marketing" role="tabpanel" aria-labelledby="v-pills-marketing-tab">
 								<div class="row">
 									<div class="col-lg-5">
-										<p>Рекламодатели смогут размещать рекламу как визуальную так и аудио в местах с наибольшим трафиком и в специально отведенных для этого местах. Теперь реклама стала еще более увлекательная, а вовлеченность в процесс еще более высокая.</p><p>Использование систем виртуальной реальности и 3D визуализации позволит привлечь потенциального клиента, оригинальным способом продемонстрировав все потребительские качества продуктов и услуг (возможно еще не существующих). Передать все впечатления от реального объекта, продукта или услуги и провести даже тестирование. Таким образом, выделится среди конкурентов и снизить затраты на привлечение клиентов.</p> 
+										<p>Рекламодатели смогут размещать рекламу как визуальную так и аудио в местах с наибольшим трафиком и в специально отведенных для этого местах. Теперь реклама стала еще более увлекательная, а вовлеченность в процесс еще более высокая.</p><p>Использование систем виртуальной реальности и 3D визуализации позволит привлечь потенциального клиента, оригинальным способом продемонстрировав все потребительские качества продуктов и услуг (возможно еще не существующих); передать все впечатления от реального объекта, продукта или услуги и даже провести тестирование. Таким образом, позволяет выделится среди конкурентов и снизить затраты на привлечение клиентов.</p> 
 									</div>
 									<div class="col-lg-6">
 										<img src="/en/img/cases/4.png" alt="" class="img-responsive">
@@ -604,7 +604,7 @@
 
 										<div class="title-md mb-3"><span class="mark">Рекламодатели</span></div>
 										<img src="/en/img/cases/4.png" alt="" class="img-responsive mb-4">
-										<p>Рекламодатели смогут размещать рекламу как визуальную так и аудио в местах с наибольшим трафиком и в специально отведенных для этого местах. Теперь реклама стала еще более увлекательная, а вовлеченность в процесс еще более высокая.</p><p>Использование систем виртуальной реальности и 3D визуализации позволит привлечь потенциального клиента, оригинальным способом продемонстрировав все потребительские качества продуктов и услуг (возможно еще не существующих). Передать все впечатления от реального объекта, продукта или услуги и провести даже тестирование. Таким образом, выделится среди конкурентов и снизить затраты на привлечение клиентов.</p> 
+										<p>Рекламодатели смогут размещать рекламу как визуальную так и аудио в местах с наибольшим трафиком и в специально отведенных для этого местах. Теперь реклама стала еще более увлекательная, а вовлеченность в процесс еще более высокая.</p><p>Использование систем виртуальной реальности и 3D визуализации позволит привлечь потенциального клиента, оригинальным способом продемонстрировав все потребительские качества продуктов и услуг (возможно еще не существующих); передать все впечатления от реального объекта, продукта или услуги и даже провести тестирование. Таким образом, позволяет выделится среди конкурентов и снизить затраты на привлечение клиентов.</p> 
 									</div>
 															</div>
 
