--- a/cn/index.html
+++ b/cn/index.html
@@ -514,7 +514,7 @@
 													<a class="nav-link active" id="v-pills-business-tab" data-toggle="pill" href="#v-pills-business" role="tab" aria-controls="v-pills-business" aria-selected="true">业务</a>
 													<a class="nav-link" id="v-pills-users-tab" data-toggle="pill" href="#v-pills-users" role="tab" aria-controls="v-pills-users" aria-selected="true">用户</a>
 													<a class="nav-link" id="v-pills-developers-tab" data-toggle="pill" href="#v-pills-developers" role="tab" aria-controls="v-pills-developers" aria-selected="true">设计人员</a>
-													<a class="nav-link" id="v-pills-marketing-tab" data-toggle="pill" href="#v-pills-marketing" role="tab" aria-controls="v-pills-marketing" aria-selected="true">广告</a>
+													<a class="nav-link" id="v-pills-marketing-tab" data-toggle="pill" href="#v-pills-marketing" role="tab" aria-controls="v-pills-marketing" aria-selected="true">广告人</a>
 						
 					</div>
 				</div>
@@ -554,7 +554,7 @@
 													<div class="tab-pane fade" id="v-pills-marketing" role="tabpanel" aria-labelledby="v-pills-marketing-tab">
 								<div class="row">
 									<div class="col-lg-5">
-										登广告者可以在流量最大的地方和特定的地点播放可视广告和音频广告。
+										<p>广告人可以把目视的广告和录音的广告放在最大流量的地方。现在广告比以前的广告更风趣的，个人参与也更大。</p><p>用着虚拟现实系统广告人可以帮找来新客户，表示出事物质量，也可以表示现实事物的特性。这样我们项目允许轶群，也可以招揽顾客的 减少费用。 </p>
 									</div>
 									<div class="col-lg-6">
 										<img src="/en/img/cases/4.png" alt="" class="img-responsive">
@@ -604,9 +604,9 @@
 									</div>
 																	<div class="cases-slide">
 
-										<div class="title-md mb-3"><span class="mark">广告</span></div>
+										<div class="title-md mb-3"><span class="mark">广告人</span></div>
 										<img src="/en/img/cases/4.png" alt="" class="img-responsive mb-4">
-										登广告者可以在流量最大的地方和特定的地点播放可视广告和音频广告。
+										<p>广告人可以把目视的广告和录音的广告放在最大流量的地方。现在广告比以前的广告更风趣的，个人参与也更大。</p><p>用着虚拟现实系统广告人可以帮找来新客户，表示出事物质量，也可以表示现实事物的特性。这样我们项目允许轶群，也可以招揽顾客的 减少费用。 </p>
 									</div>
 															</div>
 
