--- a/cn/index.html
+++ b/cn/index.html
@@ -554,7 +554,7 @@
 													<div class="tab-pane fade" id="v-pills-marketing" role="tabpanel" aria-labelledby="v-pills-marketing-tab">
 								<div class="row">
 									<div class="col-lg-5">
-										<p>广告人可以把目视的广告和录音的广告放在最大流量的地方。现在广告比以前的广告更风趣的，个人参与也更大。</p><p>用着虚拟现实系统广告人可以帮找来新客户，表示出事物质量，也可以表示现实事物的特性。这样我们项目允许轶群，也可以招揽顾客的 减少费用。 </p>
+										<p>广告人可以把目视的广告和录音的广告放在最大流量的地方。现在广告比以前的广告更风趣的，个人参与也更大。</p><p>用着虚拟现实系统广告人可以帮找来新客户，表示出事物质量，也可以表示现实事物的特性。这样我们项目允许轶群，也可以招揽顾客的 §减少费用。</p><p>在VR广告版可以放互动的广告，在Genesis Land也可以放你品牌书体风格的全息照相物。</p>
 									</div>
 									<div class="col-lg-6">
 										<img src="/en/img/cases/4.png" alt="" class="img-responsive">
@@ -606,7 +606,7 @@
 
 										<div class="title-md mb-3"><span class="mark">广告人</span></div>
 										<img src="/en/img/cases/4.png" alt="" class="img-responsive mb-4">
-										<p>广告人可以把目视的广告和录音的广告放在最大流量的地方。现在广告比以前的广告更风趣的，个人参与也更大。</p><p>用着虚拟现实系统广告人可以帮找来新客户，表示出事物质量，也可以表示现实事物的特性。这样我们项目允许轶群，也可以招揽顾客的 减少费用。 </p>
+										<p>广告人可以把目视的广告和录音的广告放在最大流量的地方。现在广告比以前的广告更风趣的，个人参与也更大。</p><p>用着虚拟现实系统广告人可以帮找来新客户，表示出事物质量，也可以表示现实事物的特性。这样我们项目允许轶群，也可以招揽顾客的 §减少费用。</p><p>在VR广告版可以放互动的广告，在Genesis Land也可以放你品牌书体风格的全息照相物。</p>
 									</div>
 															</div>
 
