update use cases

--- a/en/index.html
+++ b/en/index.html
@@ -554,7 +554,7 @@
 													<div class="tab-pane fade" id="v-pills-marketing" role="tabpanel" aria-labelledby="v-pills-marketing-tab">
 								<div class="row">
 									<div class="col-lg-5">
-										Advertisers will be able to run both visual and audio advertisements in locations with the most business traffic and in dedicated advertising spaces.
+										<p>Advertisers will be able to place visual and audio ads both at busiest traffic spots and specially designated locations. Advertising is now even more exciting and involvement in the process is all the more profound. </p><p>The use of virtual reality and 3D visualization systems will be instrumental in attracting prospective customers by displaying in an original manner all consumer qualities of products and services (possibly including those which do not yet exist), giving a sense of a real object, product or service, and even testing them. Accordingly, it creates a competitive edge and reduces customer acquisition costs.</p><p>The capability of placing advertisements on VR banners with animation and active interaction with the user, placing holographic items throughout the Genesis Land world styled after your brand book.</p>
 									</div>
 									<div class="col-lg-6">
 										<img src="/en/img/cases/4.png" alt="" class="img-responsive">
@@ -606,7 +606,7 @@
 
 										<div class="title-md mb-3"><span class="mark">Advertising</span></div>
 										<img src="/en/img/cases/4.png" alt="" class="img-responsive mb-4">
-										Advertisers will be able to run both visual and audio advertisements in locations with the most business traffic and in dedicated advertising spaces.
+										<p>Advertisers will be able to place visual and audio ads both at busiest traffic spots and specially designated locations. Advertising is now even more exciting and involvement in the process is all the more profound. </p><p>The use of virtual reality and 3D visualization systems will be instrumental in attracting prospective customers by displaying in an original manner all consumer qualities of products and services (possibly including those which do not yet exist), giving a sense of a real object, product or service, and even testing them. Accordingly, it creates a competitive edge and reduces customer acquisition costs.</p><p>The capability of placing advertisements on VR banners with animation and active interaction with the user, placing holographic items throughout the Genesis Land world styled after your brand book.</p>
 									</div>
 															</div>
 
