--- a/ja/index.html
+++ b/ja/index.html
@@ -554,7 +554,7 @@
 													<div class="tab-pane fade" id="v-pills-marketing" role="tabpanel" aria-labelledby="v-pills-marketing-tab">
 								<div class="row">
 									<div class="col-lg-5">
-										広告主は、視覚広告、音声広告の両方を最もトラフィックの多い場所や特別に指定された場所に置かれます。
+										<p> 広告主は最大通信量の専用スペースでビジュアル広告とオーディオ広告を投稿できるようになりました。これによって広告は更に面白くなり、当該過程への関与度もより高くなりました。</p><p>仮想実現と3次元可視化のシステムの採用により見込み顧客を獲得して、まだ存在しないものを含む商品・サービスの全ての消費的性質を独自的に見せることに加え、実物に対する全ての印象を伝えたりテストを行ったりすることもできるようになります。その結果、ライバルとの差別化と顧客獲得費の削減も可能になります。</p><p>アニメーションとユーザーとのインテラクション機能を備えたVRバナーへの広告投稿、ジェネジス・ランドにおけるお客様のブランドブックスタイルに沿ったホログラフィックオブジェの投稿</p>
 									</div>
 									<div class="col-lg-6">
 										<img src="/en/img/cases/4.png" alt="" class="img-responsive">
@@ -606,7 +606,7 @@
 
 										<div class="title-md mb-3"><span class="mark">広告</span></div>
 										<img src="/en/img/cases/4.png" alt="" class="img-responsive mb-4">
-										広告主は、視覚広告、音声広告の両方を最もトラフィックの多い場所や特別に指定された場所に置かれます。
+										<p> 広告主は最大通信量の専用スペースでビジュアル広告とオーディオ広告を投稿できるようになりました。これによって広告は更に面白くなり、当該過程への関与度もより高くなりました。</p><p>仮想実現と3次元可視化のシステムの採用により見込み顧客を獲得して、まだ存在しないものを含む商品・サービスの全ての消費的性質を独自的に見せることに加え、実物に対する全ての印象を伝えたりテストを行ったりすることもできるようになります。その結果、ライバルとの差別化と顧客獲得費の削減も可能になります。</p><p>アニメーションとユーザーとのインテラクション機能を備えたVRバナーへの広告投稿、ジェネジス・ランドにおけるお客様のブランドブックスタイルに沿ったホログラフィックオブジェの投稿</p>
 									</div>
 															</div>
 
