--- a/ko/index.html
+++ b/ko/index.html
@@ -554,7 +554,7 @@
 													<div class="tab-pane fade" id="v-pills-marketing" role="tabpanel" aria-labelledby="v-pills-marketing-tab">
 								<div class="row">
 									<div class="col-lg-5">
-										광고주는 트래픽이 높은 장소 혹은 특별히 지정된 장소에서 시각적 광고뿐만 아니라 오디오 광고도 행할 수 있습니다.
+										<p>광고주는 통신망 트래픽이 가장 많거나 특별한 장소에서 비주얼 CM뿐만 아니라 오디오 CM도 광고를 한다. 광고는 더 흥미로우면서 직무관여는 높아진다. </p><p>가상현실 및 3D 시각화 시스템을 사용하면 재품과 서비스 (아직 존재하지 않은 것을 포함해서)의 실적을 특별한 방법으로 보여주면서 잠재적인 고객을 끌어들일 수 있고 실제의 물체, 재품이나 서비스의 인상을 보여주어서 테스트까지 해 줄 수 있다. 그러면 경쟁자들보다 더 구별하고 고객을 끌어들일 비용을 감소할 수 있다.</p><p>애니메이션 및 사용자와의 상호적인 호혜를 가진 가상현실 밴너에서 광고를 할 수 있고 고객님의 브랜드북 스타일로 Genesis Land 홀로그램의 뭍체를 세계적으로 유통시킨다.</p>
 									</div>
 									<div class="col-lg-6">
 										<img src="/en/img/cases/4.png" alt="" class="img-responsive">
@@ -606,7 +606,7 @@
 
 										<div class="title-md mb-3"><span class="mark">광고</span></div>
 										<img src="/en/img/cases/4.png" alt="" class="img-responsive mb-4">
-										광고주는 트래픽이 높은 장소 혹은 특별히 지정된 장소에서 시각적 광고뿐만 아니라 오디오 광고도 행할 수 있습니다.
+										<p>광고주는 통신망 트래픽이 가장 많거나 특별한 장소에서 비주얼 CM뿐만 아니라 오디오 CM도 광고를 한다. 광고는 더 흥미로우면서 직무관여는 높아진다. </p><p>가상현실 및 3D 시각화 시스템을 사용하면 재품과 서비스 (아직 존재하지 않은 것을 포함해서)의 실적을 특별한 방법으로 보여주면서 잠재적인 고객을 끌어들일 수 있고 실제의 물체, 재품이나 서비스의 인상을 보여주어서 테스트까지 해 줄 수 있다. 그러면 경쟁자들보다 더 구별하고 고객을 끌어들일 비용을 감소할 수 있다.</p><p>애니메이션 및 사용자와의 상호적인 호혜를 가진 가상현실 밴너에서 광고를 할 수 있고 고객님의 브랜드북 스타일로 Genesis Land 홀로그램의 뭍체를 세계적으로 유통시킨다.</p>
 									</div>
 															</div>
 
