--- a/ja/index.html
+++ b/ja/index.html
@@ -2152,7 +2152,7 @@
                                             </div>
                                             <div class="member-name">Nikolay Lobzov</div>
                                             <div class="member-position">Art director / Leading artist / 2D artist  </div>
-                                            <div class="member-text">Worked in Akella, Nival Interactive, Vogster Entertainment, Renovatio ent, Extreme Gamma, Do Do Games, Creara and Wizart Series. Conceptual and illustrative development of characters, locations, scenery, technique, style, the surrounding world. Interface development. Creation of illustrations, posters and posters, promo-art. Experience in the CG industry for 15 years.  </div>
+                                            <div class="member-text">前職先：アケーラ(Akella)、ニーバル・インタラクティブ (Nival Interactive)、ヴォグスター・エンターテイメント(Vogster Entertainment)、レノヴァティオ・エンターテイメント(Renovatio Entertainment)、エクストラ・ゲームズ(Extra Games)、ドー・ドー・ゲームズ(Do Do Games)、クレアラ(Creara)、ウィザード・シリーズ(Wizart Series)。職務内容：キャラクター・ロケーション・デコレーション・テクニック・スタイル・環境のコンセプト的かつイラストレーション的開発、インターフェース開発、イラストや各種ポスターの作成、プロモーションアート活動。CG業界における職歴：15年。</div>
                                         </div>
                                     </div>
                                                                                                                                                                                                 
@@ -2500,7 +2500,7 @@
                                     </div>
                                     <div class="member-name">Nikolay Lobzov</div>
                                     <div class="member-position">Art director / Leading artist / 2D artist  </div>
-                                    <div class="member-text">Worked in Akella, Nival Interactive, Vogster Entertainment, Renovatio ent, Extreme Gamma, Do Do Games, Creara and Wizart Series. Conceptual and illustrative development of characters, locations, scenery, technique, style, the surrounding world. Interface development. Creation of illustrations, posters and posters, promo-art. Experience in the CG industry for 15 years.  </div>
+                                    <div class="member-text">前職先：アケーラ(Akella)、ニーバル・インタラクティブ (Nival Interactive)、ヴォグスター・エンターテイメント(Vogster Entertainment)、レノヴァティオ・エンターテイメント(Renovatio Entertainment)、エクストラ・ゲームズ(Extra Games)、ドー・ドー・ゲームズ(Do Do Games)、クレアラ(Creara)、ウィザード・シリーズ(Wizart Series)。職務内容：キャラクター・ロケーション・デコレーション・テクニック・スタイル・環境のコンセプト的かつイラストレーション的開発、インターフェース開発、イラストや各種ポスターの作成、プロモーションアート活動。CG業界における職歴：15年。</div>
                                 </div>
                             </div>
                                                     <div class="team-slide">
