--- a/ko/index.html
+++ b/ko/index.html
@@ -2152,7 +2152,7 @@
                                             </div>
                                             <div class="member-name">Nikolay Lobzov</div>
                                             <div class="member-position">Art director / Leading artist / 2D artist  </div>
-                                            <div class="member-text">Worked in Akella, Nival Interactive, Vogster Entertainment, Renovatio ent, Extreme Gamma, Do Do Games, Creara and Wizart Series. Conceptual and illustrative development of characters, locations, scenery, technique, style, the surrounding world. Interface development. Creation of illustrations, posters and posters, promo-art. Experience in the CG industry for 15 years.  </div>
+                                            <div class="member-text">Akella, Nival Interactive, Vogster Entertainment, Renovatio ent., 엑스트라 게임스”, Do Do Games, Creara 그리고 Wizart Series에 일한 경험이 있다. 캐릭터, 장소, 장식, 기술, 스타일, 환경의 개념 및 삽화 개발. 인터페이스 개발. 삽화, 포스터, 간판, 프로모 아트 개발. CG 사업의 15년 경험.</div>
                                         </div>
                                     </div>
                                                                                                                                                                                                 
@@ -2500,7 +2500,7 @@
                                     </div>
                                     <div class="member-name">Nikolay Lobzov</div>
                                     <div class="member-position">Art director / Leading artist / 2D artist  </div>
-                                    <div class="member-text">Worked in Akella, Nival Interactive, Vogster Entertainment, Renovatio ent, Extreme Gamma, Do Do Games, Creara and Wizart Series. Conceptual and illustrative development of characters, locations, scenery, technique, style, the surrounding world. Interface development. Creation of illustrations, posters and posters, promo-art. Experience in the CG industry for 15 years.  </div>
+                                    <div class="member-text">Akella, Nival Interactive, Vogster Entertainment, Renovatio ent., 엑스트라 게임스”, Do Do Games, Creara 그리고 Wizart Series에 일한 경험이 있다. 캐릭터, 장소, 장식, 기술, 스타일, 환경의 개념 및 삽화 개발. 인터페이스 개발. 삽화, 포스터, 간판, 프로모 아트 개발. CG 사업의 15년 경험.</div>
                                 </div>
                             </div>
                                                     <div class="team-slide">
